// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Menu component when no quota and email is set the user menu does not contain a quota 1`] = `
<nav aria-label="Account menu">
  <oc-button-stub appearance="raw" aria-label="My Account" class="oc-topbar-personal" id="_userMenuButton">
    <avatar-image-stub class="oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" userid="einstein" width="32"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub class="oc-overflow-hidden" close-on-click="" drop-id="account-info-container" mode="click" padding-size="small" toggle="#_userMenuButton">
    <oc-list-stub class="user-menu-list">
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-manage" to="[object Object]" type="router-link">
          <avatar-image-stub userid="einstein" width="32"></avatar-image-stub>
          <span class="profile-info-wrapper oc-py-xs">
            <span class="oc-display-block"></span>
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" to="[object Object]" type="router-link">
          <oc-icon-stub class="oc-p-xs" name="application"></oc-icon-stub>
          <span>Settings</span>
        </oc-button-stub>
      </li>
      <!--v-if-->
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-logout">
          <oc-icon-stub class="oc-p-xs" fill-type="line" name="logout-box-r"></oc-icon-stub>
          <span>Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>
`;

exports[`User Menu component when no quota and no email is set the user menu does not contain a quota 1`] = `
<nav aria-label="Account menu">
  <oc-button-stub appearance="raw" aria-label="My Account" class="oc-topbar-personal" id="_userMenuButton">
    <avatar-image-stub class="oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" userid="einstein" width="32"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub class="oc-overflow-hidden" close-on-click="" drop-id="account-info-container" mode="click" padding-size="small" toggle="#_userMenuButton">
    <oc-list-stub class="user-menu-list">
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-manage" to="[object Object]" type="router-link">
          <avatar-image-stub userid="einstein" width="32"></avatar-image-stub>
          <span class="profile-info-wrapper oc-py-xs">
            <span class="oc-display-block"></span>
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" to="[object Object]" type="router-link">
          <oc-icon-stub class="oc-p-xs" name="application"></oc-icon-stub>
          <span>Settings</span>
        </oc-button-stub>
      </li>
      <!--v-if-->
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-logout">
          <oc-icon-stub class="oc-p-xs" fill-type="line" name="logout-box-r"></oc-icon-stub>
          <span>Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>
`;

exports[`User Menu component when quota and no email is set renders a navigation without email 1`] = `
<nav aria-label="Account menu">
  <oc-button-stub appearance="raw" aria-label="My Account" class="oc-topbar-personal" id="_userMenuButton">
    <avatar-image-stub class="oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" userid="einstein" width="32"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub class="oc-overflow-hidden" close-on-click="" drop-id="account-info-container" mode="click" padding-size="small" toggle="#_userMenuButton">
    <oc-list-stub class="user-menu-list">
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-manage" to="[object Object]" type="router-link">
          <avatar-image-stub userid="einstein" width="32"></avatar-image-stub>
          <span class="profile-info-wrapper oc-py-xs">
            <span class="oc-display-block"></span>
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" to="[object Object]" type="router-link">
          <oc-icon-stub class="oc-p-xs" name="application"></oc-icon-stub>
          <span>Settings</span>
        </oc-button-stub>
      </li>
      <li class="storage-wrapper oc-pl-s">
        <oc-icon-stub class="oc-p-xs" fill-type="line" name="cloud"></oc-icon-stub>
        <div class="storage-wrapper-text oc-width-1-1">
          <p class="oc-my-rm">
            <span class="oc-display-block">Personal storage (30% used)</span>
            <span class="oc-text-small">300 B of 1 kB used</span>
          </p>
          <oc-progress-stub max="100" size="small" value="30" variation="primary"></oc-progress-stub>
        </div>
      </li>
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-logout">
          <oc-icon-stub class="oc-p-xs" fill-type="line" name="logout-box-r"></oc-icon-stub>
          <span>Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>
`;

exports[`User Menu component when quota is above 80% and below 90% renders a warning quota progress bar 1`] = `
<nav aria-label="Account menu">
  <oc-button-stub appearance="raw" aria-label="My Account" class="oc-topbar-personal" id="_userMenuButton">
    <avatar-image-stub class="oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" userid="einstein" width="32"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub class="oc-overflow-hidden" close-on-click="" drop-id="account-info-container" mode="click" padding-size="small" toggle="#_userMenuButton">
    <oc-list-stub class="user-menu-list">
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-manage" to="[object Object]" type="router-link">
          <avatar-image-stub userid="einstein" width="32"></avatar-image-stub>
          <span class="profile-info-wrapper oc-py-xs">
            <span class="oc-display-block"></span>
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" to="[object Object]" type="router-link">
          <oc-icon-stub class="oc-p-xs" name="application"></oc-icon-stub>
          <span>Settings</span>
        </oc-button-stub>
      </li>
      <li class="storage-wrapper oc-pl-s">
        <oc-icon-stub class="oc-p-xs" fill-type="line" name="cloud"></oc-icon-stub>
        <div class="storage-wrapper-text oc-width-1-1">
          <p class="oc-my-rm">
            <span class="oc-display-block">Personal storage (81% used)</span>
            <span class="oc-text-small">810 B of 1 kB used</span>
          </p>
          <oc-progress-stub max="100" size="small" value="81" variation="warning"></oc-progress-stub>
        </div>
      </li>
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-logout">
          <oc-icon-stub class="oc-p-xs" fill-type="line" name="logout-box-r"></oc-icon-stub>
          <span>Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>
`;

exports[`User Menu component when quota is above 90% renders a danger quota progress bar 1`] = `
<nav aria-label="Account menu">
  <oc-button-stub appearance="raw" aria-label="My Account" class="oc-topbar-personal" id="_userMenuButton">
    <avatar-image-stub class="oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" userid="einstein" width="32"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub class="oc-overflow-hidden" close-on-click="" drop-id="account-info-container" mode="click" padding-size="small" toggle="#_userMenuButton">
    <oc-list-stub class="user-menu-list">
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-manage" to="[object Object]" type="router-link">
          <avatar-image-stub userid="einstein" width="32"></avatar-image-stub>
          <span class="profile-info-wrapper oc-py-xs">
            <span class="oc-display-block"></span>
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" to="[object Object]" type="router-link">
          <oc-icon-stub class="oc-p-xs" name="application"></oc-icon-stub>
          <span>Settings</span>
        </oc-button-stub>
      </li>
      <li class="storage-wrapper oc-pl-s">
        <oc-icon-stub class="oc-p-xs" fill-type="line" name="cloud"></oc-icon-stub>
        <div class="storage-wrapper-text oc-width-1-1">
          <p class="oc-my-rm">
            <span class="oc-display-block">Personal storage (91% used)</span>
            <span class="oc-text-small">910 B of 1 kB used</span>
          </p>
          <oc-progress-stub max="100" size="small" value="91" variation="danger"></oc-progress-stub>
        </div>
      </li>
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-logout">
          <oc-icon-stub class="oc-p-xs" fill-type="line" name="logout-box-r"></oc-icon-stub>
          <span>Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>
`;

exports[`User Menu component when quota is below 80% renders a primary quota progress bar 1`] = `
<nav aria-label="Account menu">
  <oc-button-stub appearance="raw" aria-label="My Account" class="oc-topbar-personal" id="_userMenuButton">
    <avatar-image-stub class="oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" userid="einstein" width="32"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub class="oc-overflow-hidden" close-on-click="" drop-id="account-info-container" mode="click" padding-size="small" toggle="#_userMenuButton">
    <oc-list-stub class="user-menu-list">
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-manage" to="[object Object]" type="router-link">
          <avatar-image-stub userid="einstein" width="32"></avatar-image-stub>
          <span class="profile-info-wrapper oc-py-xs">
            <span class="oc-display-block"></span>
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" to="[object Object]" type="router-link">
          <oc-icon-stub class="oc-p-xs" name="application"></oc-icon-stub>
          <span>Settings</span>
        </oc-button-stub>
      </li>
      <li class="storage-wrapper oc-pl-s">
        <oc-icon-stub class="oc-p-xs" fill-type="line" name="cloud"></oc-icon-stub>
        <div class="storage-wrapper-text oc-width-1-1">
          <p class="oc-my-rm">
            <span class="oc-display-block">Personal storage (30% used)</span>
            <span class="oc-text-small">300 B of 1 kB used</span>
          </p>
          <oc-progress-stub max="100" size="small" value="30" variation="primary"></oc-progress-stub>
        </div>
      </li>
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-logout">
          <oc-icon-stub class="oc-p-xs" fill-type="line" name="logout-box-r"></oc-icon-stub>
          <span>Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>
`;

exports[`User Menu component when quota is not defined renders no percentag of total and no progress bar 1`] = `
<nav aria-label="Account menu">
  <oc-button-stub appearance="raw" aria-label="My Account" class="oc-topbar-personal" id="_userMenuButton">
    <avatar-image-stub class="oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" userid="einstein" width="32"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub class="oc-overflow-hidden" close-on-click="" drop-id="account-info-container" mode="click" padding-size="small" toggle="#_userMenuButton">
    <oc-list-stub class="user-menu-list">
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-manage" to="[object Object]" type="router-link">
          <avatar-image-stub userid="einstein" width="32"></avatar-image-stub>
          <span class="profile-info-wrapper oc-py-xs">
            <span class="oc-display-block"></span>
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" to="[object Object]" type="router-link">
          <oc-icon-stub class="oc-p-xs" name="application"></oc-icon-stub>
          <span>Settings</span>
        </oc-button-stub>
      </li>
      <li class="storage-wrapper oc-pl-s">
        <oc-icon-stub class="oc-p-xs" fill-type="line" name="cloud"></oc-icon-stub>
        <div class="storage-wrapper-text oc-width-1-1">
          <p class="oc-my-rm">
            <span class="oc-display-block">Personal storage</span>
            <span class="oc-text-small">910 B used</span>
          </p>
          <!--v-if-->
        </div>
      </li>
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-logout">
          <oc-icon-stub class="oc-p-xs" fill-type="line" name="logout-box-r"></oc-icon-stub>
          <span>Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>
`;

exports[`User Menu component when quota is unlimited renders no percentag of total and no progress bar 1`] = `
<nav aria-label="Account menu">
  <oc-button-stub appearance="raw" aria-label="My Account" class="oc-topbar-personal" id="_userMenuButton">
    <avatar-image-stub class="oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" userid="einstein" width="32"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub class="oc-overflow-hidden" close-on-click="" drop-id="account-info-container" mode="click" padding-size="small" toggle="#_userMenuButton">
    <oc-list-stub class="user-menu-list">
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-manage" to="[object Object]" type="router-link">
          <avatar-image-stub userid="einstein" width="32"></avatar-image-stub>
          <span class="profile-info-wrapper oc-py-xs">
            <span class="oc-display-block"></span>
            <!--v-if-->
          </span>
        </oc-button-stub>
      </li>
      <li>
        <oc-button-stub appearance="raw" to="[object Object]" type="router-link">
          <oc-icon-stub class="oc-p-xs" name="application"></oc-icon-stub>
          <span>Settings</span>
        </oc-button-stub>
      </li>
      <li class="storage-wrapper oc-pl-s">
        <oc-icon-stub class="oc-p-xs" fill-type="line" name="cloud"></oc-icon-stub>
        <div class="storage-wrapper-text oc-width-1-1">
          <p class="oc-my-rm">
            <span class="oc-display-block">Personal storage</span>
            <span class="oc-text-small">300 B used</span>
          </p>
          <!--v-if-->
        </div>
      </li>
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-logout">
          <oc-icon-stub class="oc-p-xs" fill-type="line" name="logout-box-r"></oc-icon-stub>
          <span>Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>
`;

exports[`User Menu component when user is not logged in renders a navigation with login button 1`] = `
<nav aria-label="Account menu">
  <oc-button-stub appearance="raw" aria-label="My Account" class="oc-topbar-personal" id="_userMenuButton">
    <div aria-hidden="true" class="oc-topbar-unauthenticated-avatar oc-flex-inline oc-flex-center oc-flex-middle" data-test-item-name="User Menu login" focusable="false">
      <span class="oc-avatar-item" style="--icon-color: var(--oc-color-swatch-brand-default); --width: 32px;">
        <oc-icon-stub accessiblelabel="" color="" filltype="line" name="user-add" size="small" type="span" variation="passive"></oc-icon-stub>
      </span>
    </div>
  </oc-button-stub>
  <oc-drop-stub class="oc-overflow-hidden" close-on-click="" drop-id="account-info-container" mode="click" padding-size="small" toggle="#_userMenuButton">
    <oc-list-stub class="user-menu-list">
      <li>
        <oc-button-stub appearance="raw" id="oc-topbar-account-login" to="[object Object]" type="router-link">
          <oc-icon-stub class="oc-p-xs" fill-type="line" name="login-box"></oc-icon-stub>
          <span>Log in</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>
`;
